--- a/_notebooks/2022-08-01-ML-from-scratch.ipynb
+++ b/_notebooks/2022-08-01-ML-from-scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "81acfdc6",
+   "id": "4ec1fe55",
    "metadata": {
     "collapsed": false
    },
@@ -14,12 +14,13 @@
     "- brach: master\n",
     "- comments: true\n",
     "- author: Chong-Chong He (che1234@umd.edu)\n",
-    "- categories: [jupyter, ML, machine learning, Python]"
+    "- image: https://i.imgur.com/SGP0FsX.png\n",
+    "- categories: [machine learning, Python, jupyter]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f31dbc5b",
+   "id": "90cdf0c8",
    "metadata": {
     "cell_id": "ac70dd8d-95c7-4a70-9090-3589f8bace86",
     "collapsed": false,
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12fd97e8",
+   "id": "99b40581",
    "metadata": {
     "cell_id": "00001-cc59ee1f-14f5-4b93-b8e9-e0827ddb8c6f",
     "collapsed": false,
@@ -60,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a0c963a",
+   "id": "35d924d1",
    "metadata": {
     "cell_id": "00002-5aa08f0b-90fa-42c9-a426-1c15cdef71f1",
     "collapsed": false,
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2f821e1",
+   "id": "970f0fd2",
    "metadata": {
     "cell_id": "00003-f19d20ca-35de-4d09-9342-ac4c109188af",
     "collapsed": false,
@@ -120,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "06af4582",
+   "id": "55cee08f",
    "metadata": {
     "cell_id": "00004-a5df1bc5-72e9-4063-b7b7-21238120c2a6",
     "collapsed": false,
@@ -181,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f7d269e",
+   "id": "565469a3",
    "metadata": {
     "cell_id": "00005-073cda12-c3e6-4fa0-af45-b2b62868c4de",
     "collapsed": false,
@@ -205,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6474ae74",
+   "id": "70e7cc37",
    "metadata": {
     "cell_id": "00006-dc6d79cb-4b66-4f5f-ab93-8a5e715d4382",
     "collapsed": false,
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73aad750",
+   "id": "7370bf59",
    "metadata": {
     "cell_id": "00007-b28bb90f-c1d8-4d0d-92fe-e16ca858a74e",
     "collapsed": false,
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf71372d",
+   "id": "65a70da1",
    "metadata": {
     "cell_id": "00008-190c43ce-aab7-493e-8644-d208df0de36b",
     "collapsed": false,
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "790d219a",
+   "id": "da7cfaa3",
    "metadata": {
     "cell_id": "00009-f93315a6-d53a-4e94-915d-fc48c04d4b6e",
     "collapsed": false,
@@ -329,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "60e65c9b",
+   "id": "f7d5d91c",
    "metadata": {
     "cell_id": "00010-3001e080-5fa8-4fc2-8a8c-bab1ffa57cfe",
     "collapsed": false,
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8c6b987",
+   "id": "284526b4",
    "metadata": {
     "cell_id": "00011-1142287f-fa88-4493-a507-bee8dbab06fa",
     "collapsed": false,
@@ -395,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4e78054e",
+   "id": "830bd70a",
    "metadata": {
     "cell_id": "00012-4f9aa161-1bd6-4898-892c-060df9b92dff",
     "collapsed": false,
@@ -431,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f4fec54",
+   "id": "c56dbad6",
    "metadata": {
     "cell_id": "00013-fd759761-42c7-4583-8896-ce6550b54787",
     "collapsed": false,
@@ -475,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "002ec475",
+   "id": "f1b94784",
    "metadata": {
     "cell_id": "00014-5c4a7290-799c-4d6c-a67b-0ace2fe9d579",
     "collapsed": false,
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f3041d",
+   "id": "cbc0982c",
    "metadata": {
     "cell_id": "00015-6aa05455-ad1a-4579-acbd-df400a154670",
     "collapsed": false,
@@ -533,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0f9a1742",
+   "id": "5ab6d8bf",
    "metadata": {
     "cell_id": "00016-41a3a1ce-cceb-4dc9-996c-5c6834f99098",
     "collapsed": false,
@@ -574,7 +575,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af6b1ab",
+   "id": "6f415ca5",
    "metadata": {
     "cell_id": "00017-c1fd449a-5f1c-4c78-b6b7-f47ba8412ba9",
     "collapsed": false,
@@ -594,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dd1c20dd",
+   "id": "23818d94",
    "metadata": {
     "cell_id": "00018-77c2b5c0-43b3-4775-809f-386946f4c1b9",
     "collapsed": false,
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c748db53",
+   "id": "f69922be",
    "metadata": {
     "cell_id": "00019-9f36f855-48fb-4a26-8bf3-b5ddcfae895d",
     "collapsed": false,
@@ -644,7 +645,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "de7c6543",
+   "id": "9b63136a",
    "metadata": {
     "cell_id": "00020-4ffb6e63-f9ff-4440-b550-be8c99c4cbb8",
     "collapsed": false,
@@ -708,7 +709,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3122b56d",
+   "id": "16bf52f6",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "The model achieves 99% accuracy on this simple binary classification task. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7999f9de",
    "metadata": {
     "cell_id": "00021-31d7d0c1-55dc-4357-9061-8358d3e9943c",
     "collapsed": false,
@@ -732,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8d76ff28",
+   "id": "8fa26688",
    "metadata": {
     "cell_id": "00022-7e3fa261-724b-4f98-9260-88d2defde482",
     "collapsed": false,
@@ -763,7 +774,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0abb9ae",
+   "id": "24abf9f4",
    "metadata": {
     "cell_id": "00023-6c38ab0d-1249-4c83-896a-e8ed54aff4d7",
     "collapsed": false,
@@ -783,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cbda3d5f",
+   "id": "6881cd68",
    "metadata": {
     "cell_id": "00027-0cf665d8-7e40-413b-9a6b-879831680d46",
     "collapsed": false,
@@ -852,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f4672b2",
+   "id": "c669e483",
    "metadata": {
     "cell_id": "de068c50368c4e2496e6c6f00cf8a3c8",
     "collapsed": false,
@@ -868,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "50c2950d",
+   "id": "61b1d8cf",
    "metadata": {
     "allow_embed": false,
     "cell_id": "eee61fcc3ebb452d8b1572dc1149f9b8",
@@ -942,7 +953,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66d2b96b",
+   "id": "79534708",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "The model achieves 91% accuracy on the training dataset and 84% accuracy on the test sample."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aff8bb32",
    "metadata": {
     "cell_id": "56b46f0940554aac80ebf1cfedfbbd16",
     "collapsed": false,
@@ -959,7 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "863ff305",
+   "id": "bac7b6ea",
    "metadata": {
     "cell_id": "f8b267409a5246278277ccf206ba28e3",
     "collapsed": false,
@@ -1006,7 +1027,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bf46120",
+   "id": "fbddf4dd",
    "metadata": {
     "cell_id": "053224f858d243d9ab7aa8f3e8c4d6a9",
     "collapsed": false,
